Code refactoring of hawkbit-ddi-api (#2052)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>